PyMaker/datas/object2/RawHTML/i12101/Python_DOC_referPages.running-python-pip-and-easy-install-throwing-up-errors.txt
<div class="post-text" itemprop="text">
<p>I'm tying to install a new package I have been recommended using either <code>pip</code> or <code>easy_install</code> and both are throwing up the below error and I can figure out why.</p>
<p>I have cleared the <code>temp</code> folder as thought this was the issue at first.</p>
<p>I have just stuck the <code>pip</code> error up but can add <code>easy_install</code> if needed </p>
<pre><code>c:\Python32\Scripts&gt;easy_install PyMySQL
C:\Python32\lib\site-packages\setuptools-20.2.2-py3.2.egg\pkg_resources\__init__.py:87: UserWarning: Support for Python 3.0-3.2 has been dropped. Future versions will fail here.
Searching for PyMySQL
Reading https://pypi.python.org/simple/PyMySQL/
Best match: PyMySQL 0.7.2
Downloading https://pypi.python.org/packages/source/P/PyMySQL/PyMySQL-0.7.2.tar.gz#md5=6d757cda8bfbd312714207f7c0bef5c7
Processing PyMySQL-0.7.2.tar.gz
Writing c:\users\jarratt\appdata\local\temp\easy_install-bf6ut8\PyMySQL-0.7.2\setup.cfg
Running PyMySQL-0.7.2\setup.py -q bdist_egg --dist-dir c:\users\jarratt\appdata\local\temp\easy_install-bf6ut8\PyMySQL-0.7.2\egg-dist-tmp-x5vabv
C:\Python32\lib\site-packages\setuptools-20.2.2-py3.2.egg\pkg_resources\__init__.py:87: UserWarning: Support for Python 3.0-3.2 has been dropped. Future versions will fail here.
Traceback (most recent call last):
  File "C:\Python32\lib\site-packages\setuptools-20.2.2-py3.2.egg\setuptools\sandbox.py", line 154, in save_modules
  File "C:\Python32\lib\site-packages\setuptools-20.2.2-py3.2.egg\setuptools\sandbox.py", line 195, in setup_context
  File "C:\Python32\lib\site-packages\setuptools-20.2.2-py3.2.egg\setuptools\sandbox.py", line 243, in run_setup
  File "C:\Python32\lib\site-packages\setuptools-20.2.2-py3.2.egg\setuptools\sandbox.py", line 273, in run
  File "C:\Python32\lib\site-packages\setuptools-20.2.2-py3.2.egg\setuptools\sandbox.py", line 242, in runner
  File "C:\Python32\lib\site-packages\setuptools-20.2.2-py3.2.egg\setuptools\sandbox.py", line 46, in _execfile
  File "c:\users\jarratt\appdata\local\temp\easy_install-bf6ut8\PyMySQL-0.7.2\setup.py", line 4, in &lt;module&gt;
  File "c:\users\jarratt\appdata\local\temp\easy_install-bf6ut8\PyMySQL-0.7.2\pymysql\__init__.py", line 28, in &lt;module&gt;
  File "c:\users\jarratt\appdata\local\temp\easy_install-bf6ut8\PyMySQL-0.7.2\pymysql\converters.py", line 59
    _escape_table[0] = u'\\0'
                            ^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "c:\Python32\Scripts\easy_install-script.py", line 9, in &lt;module&gt;
    load_entry_point('setuptools==20.2.2', 'console_scripts', 'easy_install')()
  File "C:\Python32\lib\site-packages\setuptools-20.2.2-py3.2.egg\setuptools\command\easy_install.py", line 2244, in main
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>The <a href="https://github.com/PyMySQL/PyMySQL/blob/4017e31244d660957e633ea6e32721f3c08e9012/pymysql/converters.py#L59" rel="nofollow noreferrer">code of PyMySQL</a> uses Unicode literals.</p>
<p>The <code>py3.2</code> parts of the directory names in the traceback of your error message tells me you're using Python 3.2. While Python 2 had Unicode literals, Python 3.0 to 3.2 didn't: The syntax was <a href="https://docs.python.org/3/whatsnew/3.0.html#text-vs-data-instead-of-unicode-vs-8-bit" rel="nofollow noreferrer">removed with Python 3.0</a>:</p>
<blockquote>
<p>You can no longer use <code>u"..."</code> literals for Unicode text.</p>
</blockquote>
<p>It was <a href="https://docs.python.org/3/whatsnew/3.3.html#pep-414-explicit-unicode-literals" rel="nofollow noreferrer">re-introduced with Python 3.3</a> by <a href="https://www.python.org/dev/peps/pep-0414/" rel="nofollow noreferrer">PEP 414</a> for backwards compatibility reasons.</p>
<p>As <a href="https://stackoverflow.com/a/35828925/674064">Boaz stated</a> and <a href="https://stackoverflow.com/questions/35828760/running-python-pip-and-easy-install-throwing-up-errors#comment59324601_35828760">Padraic pointed out</a>, PyMySQL requires Python 2.x ≥ 2.6 <strong>or 3.x ≥ 3.3</strong>, thus why the authors of PyMySQL felt free to use the Unicode literal syntax in their code.</p>
</div>
<div class="post-text" itemprop="text">
<p>Install Python 3.3 or higher. Check PyMySQL minimum requirements:</p>
<p><a href="https://pypi.python.org/pypi/PyMySQL#id1" rel="nofollow">https://pypi.python.org/pypi/PyMySQL#id1</a></p>
</div>
<span class="comment-copy">Sorry done the edit</span>
<span class="comment-copy"><code>UserWarning: Support for Python 3.0-3.2 has been dropped</code>, you should update python to a newer version regardless.</span>
